fix(card): image & text alignment in card-header

--- a/nuxt/src/assets/scss/components/_card.scss
+++ b/nuxt/src/assets/scss/components/_card.scss
@@ -129,9 +129,8 @@
         }
 
         .card__img-headline-container {
-          height: 100%;
-          position: relative;
-          top: 0%;
+          align-self: flex-end;
+          padding-bottom: 1rem;
 
           .headline {
             @include font-style($style: 'font-size-4', $line: 'wide');
